# ops-agent-controller

./: .env  .env.test  .gitignore  AMAZON_Q_INTEGRATION_SUMMARY.md  AUTHENTICATION_IMPLEMENTATION.md  CHANGES_SUMMARY.md  CONFIGURATION.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  FINAL_VALIDATION_REPORT.md  FIX_SUMMARY.md  LIVE_TESTING_GUIDE.md  Makefile  QUICK_START.md  README.md  SESSION_SUMMARY.md  TASK_10_1_SUMMARY.md  TASK_11_1_SUMMARY.md  TEAMS_APP_SETUP.md  TEAMS_AWS_ARCHITECTURE.md  TEAMS_INTEGRATION_FIX.md  TEAMS_TROUBLESHOOTING.md  apigw-cloudwatch-trust.json  complete-teams-setup.sh  config.sh  demo_integration.py  demo_web_channel.py  deploy-amazon-q-integration.sh  deploy-full-infrastructure.sh  deploy-now.sh  destroy-all-infrastructure.sh  lambda-env.json  live_environment_report_20260130_215147.md  live_environment_report_20260130_215406.md  live_environment_report_20260130_220016.md  live_environment_report_20260130_220101.md  live_environment_report_20260130_222300.md  manual-teams-setup.md  open-gui-setup.sh  package-integrated-teams-app.sh  (+17 more)
docs/: PRODUCTION_IMPLEMENTATION_GUIDE.md  TEAMS_APP_SETUP.md  TEAMS_AWS_ARCHITECTURE.md  amazon-q-business-integration-guide.md  amazon-q-integration.md  amazon-q-plugin-setup.md  credential-setup.md  deployment-guide.md  plugin-sample-requests-responses.md  teams-integration.md  troubleshooting.md
infrastructure/: README.md  amazon-q-plugin-schema.yaml  cleanup.sh  configure-environment.sh  configure.sh  deploy-environment.sh  deploy.sh  live-testing-setup.sh  minimal-template.yaml  openapi-q-compatible.yaml  (+13 more)
(+46 files in other folders)
